# song-guess-game

./: .coveragrc  main.py  pyproject.toml  readme.md  requirements.txt  settings.json
guesser/: consts.py  game.py  main.py  menus.py  metadata.py  models.py  player.py  settings.py  settings_menu.py  utils.py
song_guess_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: config.yaml
src/app/: consts.py  exceptions.py  files.py  formatters.py  main.py  menus.py  models.py  presenter.py  progress_bar.py  state.py  utils.py  validators.py  viewers.py  views.py
src/app/abstract/: cli.py  menus.py  models.py  presenters.py  processors.py  validators.py  viewers.py  views.py
src/app/cli/: colors.py  exceptions.py  factories.py  formatters.py  menus.py  models.py  processors.py  templates.py  utils.py  viewers.py
src/app/cli/core/: models.py  structs.py
src/app/cli/mods/: manglers.py  models.py  processors.py  receivers.py  representers.py  validators.py
src/app/game/: factories.py  models.py  presenters.py  processors.py  representations.py  selection.py  templates.py  utils.py
src/app/main/: factories.py  main.py  presenters.py  processors.py  state.py  templates.py  validators.py  viewers.py
src/app/menus/: models.py  presenters.py
src/app/navigation/: factories.py  processors.py  templates.py
src/app/readme/: factories.py  models.py  presenters.py  processors.py  representations.py  templates.py  texts.py
src/app/settings/: exceptions.py  factories.py  models.py  presenter.py  presenters.py  processors.py
