[build-system]
requires = ["setuptools==65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song_guess_game"
authors = [
    {name = "Igor Lashkov", email = "rwrotson@yandex.ru"},
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8.13"
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic==1.9.2",
    "python-magic-bin==0.4.14",
    "libmagic==1.0",
    "music-tag==0.4.3",
    "pydub==0.25.1",
    "termcolor==1.1.0",
    "loguru==0.6.0"
]

[project.scripts]
song-guess-game = "guesser.main:main"